--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,23 +21,19 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.1.0 <4.0.0'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
+  built_value: ^8.1.3
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_gemini: ^3.0.0
+  json_annotation: ^4.8.0
+  json_serializable: ^6.1.3
+  provider: ^6.0.1
 
 dev_dependencies:
+  build_runner: ^2.1.7
+  built_value_generator: ^8.1.4
   flutter_test:
     sdk: flutter
 
